# BatchOCR

./: LICENSE.txt  Logs.lnk  README.md  setup.cfg
src/batchocr/: __init__.py  batchocr.py
