[metadata]
name = batchocr
version = attr: batchocr.__version__
author = Keith Gorlen
author_email = kgorlen@gmail.com
description = Batch convert PDF files to searchable PDF files using ABBYY FineReader Sprint.
long_description = file: README.md, LICENSE.txt
url = https://github.com/kgorlen/batchocr
keywords = OCR, PDF, ABBYY
license = MIT
classifiers = 
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    build>=1.2.2
    PyMuPDF>=1.24.14
    platformdirs>=4.3.6
    pillow>=11.0.0
    psutil>=6.1.0
    pywin32>=308

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    batchocr = batchocr.batchocr:main
